--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,218 @@
-.App {
+@font-face {
+  font-family: hindi;
+  src: url(./Kruti_Dev_010.ttf);
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0px;
+  grid-row-gap: 0; /* Remove the gap between rows */
+  max-width: 21cm; /* A4 width */
+  margin: 0 auto;
+  padding: 5px;
+  height: 29.7cm;
+  box-sizing: border-box;
+  border: 2px solid black;
+}
+
+.grid-row {
+  display: flex;
+}
+
+.grid-item {
+  flex: 1;
+  /* border: 1px solid black; */
+  padding: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* Media query for printing */
+@media print {
+  body {
+    width: 21cm; /* A4 width */
+    height: 29.7cm; /* A4 height */
+    margin: 0; /* Reset default margin */
+  }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .grid-container {
+    max-width: 100%; /* Make sure the content fits within the A4 width */
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box-12 {
+  display: flex;
+  /* Spanning two columns for the merged grid item */
+  justify-content: space-between;
+}
+
+.box-22 {
+  grid-column: span 2; /* Spanning two columns for the merged grid item */
+}
+
+.box-31 {
+  grid-column: span 3; /* Spanning two columns for the merged grid item */
+}
+
+.box-41 {
+  border: 1px solid black;
+  border-left: none; /* Spanning two columns for the merged grid item */
+}
+
+.box-42 {
+  grid-column: span 2;
+  border: 1px solid black;
+  border-right: none; /* Spanning two columns for the merged grid item */
+}
+
+.box-51 {
+  grid-row: span 20;
+  border: 1px solid black;
+  border-left: none; /* Spanning two columns for the merged grid item */
+}
+
+.box-52 {
+  grid-row: span 20; /* Spanning two columns for the merged grid item */
+  grid-column: span 2;
+  border: 1px solid black;
+  border-right: none; /* Spanning two columns for the merged grid item */
+}
+.box-00,.box-01{
+  border: 1px solid black;
+
+}
+.box-01{
+  grid-column: span 2;
+  border-right: none;
+}
+.box-00{
+  border-left: none;
+}
+
+input {
+  border: none;
+  border-bottom: dotted black;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.box-52 textarea {
+  font-family: hindi;
+  margin-left:0px ;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+  border: none;
+  outline: none;
+  resize: none;
+  font-size: 18px;
+  box-sizing: border-box;
+  padding: 10px;
+  white-space: pre-wrap;
+}
+
+textarea {
+  font-family: hindi;
+  margin-left: 50px;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+  border: none;
+  outline: none;
+  resize: none;
+  font-size: 18px;
+  box-sizing: border-box;
+  padding: 10px;
+  white-space: pre-wrap;
+}
+#myTarea {
+  margin-top: 20px;
+  margin-left: 10px;
+  width: calc(100% - 5px);
+  height: calc(100% - 20px);
+  border: none;
+  outline: none;
+  resize: none;
+  font-size: 18px;
+  box-sizing: border-box;
+  white-space: pre-wrap;
+  overflow-y: hidden;
+}
+#myarea {
+  margin-top: 10px;
+  margin-left: 5px;
+  width: calc(100% - 5px);
+  height: calc(100% - 20px);
+  border: none;
+  outline: none;
+  resize: none;
+  font-size: 18px;
+  box-sizing: border-box;
+  white-space: pre-wrap;
+  overflow-y: hidden;
+}
+#pageNumber {
+  text-align: right;
+  font-size: 30px;
+}
+
+.print-button {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #007BFF;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+  z-index: 1000;
+}
+
+.fontSize {
+  position: fixed;
+  top: 80px; /* Adjusted top position */
+  right: 20px;
+  margin-top: 50px; /* Removed margin-top */
+  z-index: 1000;
+}
+
+#labelhai {
+  margin-top: 20px; /* Adjusted margin-top */
+}
+
+
+ .btn {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: fixed;
+  top: 180px;
+  right: 20px;
+  gap: 10px;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  padding: 10px;
+  border-radius: 3px;
+  background-color: #007BFF;
+  color: #fff;
+  border: none;
+  font-size: 14px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 1100px) {
+  .grid-container {
+    margin-top: 300px;
   }
-  to {
-    transform: rotate(360deg);
+  .fontSize {
+    position: fixed;
+    z-index: 1;
+    top: 50px;
   }
+  .btn {
+    .fontSize {
+      position: fixed;
+      top: 80px;
+    }
+  }
+  
 }
